tests/dataset/tpc-ds/compiler/pl/q36.pl
% Generated by Mochi compiler v0.10.26 on 2025-07-15T06:34:33Z
:- style_check(-singleton).
get_item(Container, Key, Val) :-
    is_dict(Container), !, (string(Key) -> atom_string(A, Key) ; A = Key), get_dict(A, Container, Val).
get_item(Container, Index, Val) :-
    string(Container), !, string_chars(Container, Chars), nth0(Index, Chars, Val).
get_item(List, Index, Val) :- nth0(Index, List, Val).

to_list(Str, L) :-
    string(Str), !,
    string_chars(Str, L).
to_list(L, L).

count(V, R) :-
    is_dict(V), !, get_dict('Items', V, Items), length(Items, R).
count(V, R) :-
    string(V), !, string_chars(V, C), length(C, R).
count(V, R) :-
    is_list(V), !, length(V, R).
count(_, _) :- throw(error('count expects list or group')).

avg(V, R) :-
    is_dict(V), !, get_dict('Items', V, Items), avg_list(Items, R).
avg(V, R) :-
    is_list(V), !, avg_list(V, R).
avg(_, _) :- throw(error('avg expects list or group')).
avg_list([], 0).
avg_list(L, R) :- sum_list(L, S), length(L, N), N > 0, R is S / N.

sum(V, R) :-
    is_dict(V), !, get_dict('Items', V, Items), sum_list(Items, R).
sum(V, R) :-
    is_list(V), !, sum_list(V, R).
sum(_, _) :- throw(error('sum expects list or group')).

group_insert(Key, Item, [], [_{key:Key, 'Items':[Item]}]).
group_insert(Key, Item, [G|Gs], [NG|Gs]) :- get_dict(key, G, Key), !, get_dict('Items', G, Items), append(Items, [Item], NItems), put_dict('Items', G, NItems, NG).
group_insert(Key, Item, [G|Gs], [G|Rs]) :- group_insert(Key, Item, Gs, Rs).
group_pairs([], Acc, Res) :- reverse(Acc, Res).
group_pairs([K-V|T], Acc, Res) :- group_insert(K, V, Acc, Acc1), group_pairs(T, Acc1, Res).
group_by(List, Fn, Groups) :- findall(K-V, (member(V, List), call(Fn, V, K)), Pairs), group_pairs(Pairs, [], Groups).

:- use_module(library(http/json)).
load_data(Path, Opts, Rows) :-
    (is_dict(Opts), get_dict(format, Opts, Fmt) -> true ; Fmt = 'json'),
    (Path == '' ; Path == '-' -> read_string(user_input, _, Text) ; read_file_to_string(Path, Text, [])),
    (Fmt == 'jsonl' ->
        split_string(Text, '\n', ' \t\r', Lines0),
        exclude(=(''), Lines0, Lines),
        findall(D, (member(L, Lines), open_string(L, S), json_read_dict(S, D), close(S)), Rows)
    ;
        open_string(Text, S), json_read_dict(S, Data), close(S),
        (is_list(Data) -> Rows = Data ; Rows = [Data])
    ).

expect(Cond) :- (Cond -> true ; throw(error('expect failed'))).

:- initialization(main, main).
main :-
    dict_create(_V0, map, [ss_item_sk-1, ss_store_sk-1, ss_sold_date_sk-1, ss_ext_sales_price-100, ss_net_profit-20]),
    dict_create(_V1, map, [ss_item_sk-2, ss_store_sk-1, ss_sold_date_sk-1, ss_ext_sales_price-200, ss_net_profit-50]),
    dict_create(_V2, map, [ss_item_sk-3, ss_store_sk-2, ss_sold_date_sk-1, ss_ext_sales_price-150, ss_net_profit-30]),
    Store_sales = [_V0, _V1, _V2],
    dict_create(_V3, map, [i_item_sk-1, i_category-"Books", i_class-"C1"]),
    dict_create(_V4, map, [i_item_sk-2, i_category-"Books", i_class-"C2"]),
    dict_create(_V5, map, [i_item_sk-3, i_category-"Electronics", i_class-"C3"]),
    Item = [_V3, _V4, _V5],
    dict_create(_V6, map, [s_store_sk-1, s_state-"A"]),
    dict_create(_V7, map, [s_store_sk-2, s_state-"B"]),
    Store = [_V6, _V7],
    dict_create(_V8, map, [d_date_sk-1, d_year-2000]),
    Date_dim = [_V8],
    findall(_V23, (member(Ss, Store_sales), member(D, Date_dim), get_item(Ss, 'ss_sold_date_sk', _V9), get_item(D, 'd_date_sk', _V10), (_V9 == _V10), member(I, Item), get_item(Ss, 'ss_item_sk', _V11), get_item(I, 'i_item_sk', _V12), (_V11 == _V12), member(S, Store), get_item(Ss, 'ss_store_sk', _V13), get_item(S, 's_store_sk', _V14), (_V13 == _V14), get_item(D, 'd_year', _V15), get_item(S, 's_state', _V16), get_item(S, 's_state', _V17), ((_V15 == 2000), ((_V16 == "A") ; (_V17 == "B"))), get_item(I, 'i_category', _V18), get_item(I, 'i_class', _V19), dict_create(_V20, map, [category-_V18, class-_V19]), _V21 = _V20, dict_create(_V22, map, ['Ss'-Ss, 'D'-D, 'I'-I, 'S'-S]), _V23 = _V21-_V22), _V24),
    group_pairs(_V24, [], _V25),
    findall(_V39, (member(G, _V25), get_item(G, 'key', _V26), get_item(_V26, 'category', _V27), get_item(G, 'key', _V28), get_item(_V28, 'class', _V29), findall(_V31, (member(X, G), true, get_item(X, 'ss_net_profit', _V30), _V31 = _V30), _V32), sum(_V32, _V33), findall(_V35, (member(X, G), true, get_item(X, 'ss_ext_sales_price', _V34), _V35 = _V34), _V36), sum(_V36, _V37), dict_create(_V38, map, [i_category-_V27, i_class-_V29, gross_margin-(_V33 / _V37)]), _V39 = _V38), _V40),
    Result = _V40,
    json_write_dict(current_output, Result), nl,
    true,
    dict_create(_V41, map, [i_category-"Books", i_class-"C1", gross_margin-0.2]),
    dict_create(_V42, map, [i_category-"Books", i_class-"C2", gross_margin-0.25]),
    dict_create(_V43, map, [i_category-"Electronics", i_class-"C3", gross_margin-0.2]),
    expect((Result == [_V41, _V42, _V43])),
    true.
